methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value False
  var vuBiscuit=False
                ^MethodsReturning:4: error: not found: value True
                if(estSurBiscuit()){vuBiscuit=True}}
                                              ^