methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=False
  for(x<-1 to 6){avance()
                if(estSurBiscuit()){vuBiscuit=True}}
  for(x<-1 to 6){recule()}
  return vuBiscuit
}